# i2c-devices-rs

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.cspell/: custom-dictionary-workspace.txt
.github/: CODEOWNERS  dependabot.yaml  release-please-config.json  release-please.yml
.github/workflows/: release-please.yaml  validate-code.yaml
doc/: trait.md
examples/esp32-c6/: Cargo.toml  README.md
examples/esp32-c6/src/: main.rs
examples/rp2040/: Cargo.toml  README.md  rust-toolchain.toml
examples/rp2040/.cargo/: config.toml
examples/rp2040/src/: main.rs
src/: i2c_helpers.rs  lib.rs  lib.rs_2  traits.rs
src/at24c0xd/: mod.rs
src/emc2101/: README.md  config.rs  conversion_rate.rs  conversions.rs  fan.rs  hardware_details.rs  lut.rs  mod.rs  scratch_register.rs  temperature.rs
src/emc2101-python/: core.py
src/emc2101/data_objects/: alert_mask.rs  averaging_filter.rs  beta_compensation.rs  config_register.rs  mod.rs  spin_up_behavior.rs
src/emc2101/hw/: defaults.rs  device_registers.rs  i2c_helpers.rs  mod.rs
src/ht16k33/: README.md  common.rs  converter.rs  did.rs  mod.rs
src/ht16k33/hw/: mod.rs
tests/: mod.rs  test_emc2101.rs
tests/common/: mod.rs
tests/emc2101/: mod.rs
tests/emc2101/common/: mod.rs
tests/emc2101_api/: mod.rs
tests/emc2101_hw/: mod.rs
tests/ht16k33/: convert.rs  mod.rs
tests/ht16k33/common/: mod.rs
tests/ht16k33_hw/: mod.rs
